Moved data structs from ButtonState to ToggleClueButton

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="btnShuffle">Shuffle</string>
     <string name="lblPoint">Point</string>
 
-    <string name="holderWordGuess">ABCDEFGH</string>
+    <string name="holderWordGuess" />
     <string name="holderSingleChar">X</string>
 
     <string name="submitDescription">submit_logo</string>
